# hmcpl-library-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: library-checkouts.md  library-hold.md  library-holds.md  library-renew.md  library-search.md  library-status.md  library.md
hmcpl/: __init__.py  cli.py  client.py  models.py  parser.py
